Signed-off-by: wangshuyong1985@163.com <wangshuyong1985@163.com>

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>上海泰宗实业有限公司</title>
+<title>上海泰宗实业有限公司 上海长江联合交易中心152号会员</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href='http://fonts.useso.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
@@ -202,7 +202,7 @@
 			</ul>
 		</div>
 <div style="color:#FFF;font-size:12px">
-<a href="" style="color:#0C3">上海泰宗实业有限公司</a> ©版权所有 
+<a href="" style="color:#0C3">上海泰宗实业有限公司 上海长江联合交易中心152号会员</a> ©版权所有 
 </div>
 		<div class="clear"></div>
 	</div>
