--- a/contact.html
+++ b/contact.html
@@ -211,7 +211,7 @@
 			</ul>
 		</div>
 <div style="color:#FFF;font-size:12px">
-<a href="" style="color:#0C3">上海泰宗实业有限公司</a> ©版权所有 
+<a href="" style="color:#0C3">上海泰宗实业有限公司 上海长江联合交易中心152号会员</a> ©版权所有 
 </div>
 		<div class="clear"></div>
 	</div>
